# try-anchor-cpi

./: Anchor.toml
programs/puppet-master/src/: lib.rs
programs/puppet/src/: lib.rs
programs/puppet_master_pda/: Cargo.toml
programs/puppet_master_pda/src/: lib.rs
programs/puppet_pda/: Cargo.toml
programs/puppet_pda/src/: lib.rs
tests/: puppet-pda.ts  puppet.ts
